--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "devStart": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "build": "react-scripts build",
-    "buildncopy": "npm run build && (cp -r build ../backend/)"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
